Fix button spacing issue

--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -54,6 +54,10 @@
 .blog .cta {
   color: $text-muted;
   margin: 2rem 0;
+
+  .button {
+    margin-right: 5px;
+  }
 }
 
 .blog .footer {
